se modificó el container

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
 
 <!-- Menu de navegación -->
+<div class="container"></div>
     <nav class="menu">
         <a href="#">Buzón</a>
         <a href="#">Enviados</a>
@@ -19,7 +20,7 @@
         <a href="#">Eliminados</a>
     </nav>
 <!-- Sub-Menú -->
-<div class="container">
+
     <nav class="sub-menu">
         <a href="#" class="izquierda">Ordenar Por Fecha</a>
         <a href="#" class="izquierda">Seleccionar todos</a>
