--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon-96x96.png">
     <title>Portafolio Coded Brain</title>
 </head>
+
 <body>
-    
+    <header class=encabezado>
+        <div>
+            <img src="img/logo.jpg" alt="">
+            <h1>CODED BRAIN</h1>
+        </div>
+        <div>
+            <h3>Usuario</h3>
+            <p>Correo@gmail.com</p>
+            <img src="" alt="">
+        </div>
+    </header>
 </body>
+
 </html>
