--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
     </nav>
 </div>
 
+<footer class="footer">
+    <div>
+        Puedes tener más información en <a href="https://www.google.com.ec/">Google</a> 
+    </div>
+    
+    <div>
+         <p> &copy; Derechos reservados <img src="imagenes/logo3.jpg" width="120" alt="CODED"></p>
+    </div>
+        <div class="footer-iconos">
+            <a href="https://www.instagram.com/?hl=es-la" target="_blak"><div class="#"><img src="imagenes/instagram.png" alt="">instagram</div></a> 
+            <a href="https://www.youtube.com/?hl=es&gl=EC" target="_blak"><div class="#"><img src="imagenes/yout.png" alt="">YouTube</div></a>
+            <a href="https://www.facebook.com/facebookapp/?brand_redir=185150934832623" target="_blak"><div class="#"><img src="imagenes/facebook.png" alt="">Facebook</div></a>
+        
+        </div>    
+</footer>
+
 </body>
 
 </html>
