Creamos hoja Css y conectamos con el index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon-96x96.png">
     <title>Portafolio Coded Brain</title>
+
+    <!-- ENLACE A LA HOJA DE ESTILO EXTERNO CSS -->
+    <link rel="stylesheet" href="/estilo.css">
+
 </head>
 
 <body>
