Agregué comentarios y acomodé lineas de código

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <!-- ENLACE A LA HOJA DE ESTILO EXTERNO CSS -->
     <link rel="stylesheet" href="/estilo.css">
 
+    <!-- ESTILO INTERNO -->
+    <style>
+
+    </style>
 </head>
 
 <body>
 
+    <!-- ------------------------ HEADER O ENCABEZADO ------------------------------------------------- -->
     <header class=encabezado>
         <div>
             <img src="img/logo.jpg" alt="">
@@ -26,20 +31,16 @@
         </div>
     </header>
 
-   
-
-
-
-<!-- Menu de navegación -->
-<div class="container"></div>
+    <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
+    <div class="container"></div>
     <nav class="menu">
         <a href="#">Buzón</a>
         <a href="#">Enviados</a>
         <a href="#">Borradores</a>
         <a href="#">Eliminados</a>
     </nav>
-<!-- Sub-Menú -->
 
+    <!-- ------------------------ SUB MENÚ ------------------------------------------------------------ -->
     <nav class="sub-menu">
         <a href="#" class="izquierda">Ordenar Por Fecha</a>
         <a href="#" class="izquierda">Seleccionar todos</a>
@@ -47,23 +48,36 @@
         <a href="#" class="centrado">Personal</a>
         <a href="#" class="centrado">Viajes</a>
     </nav>
-</div>
+    </div>
 
-<footer class="footer">
-    <div>
-        Puedes tener más información en <a href="https://www.google.com.ec/">Google</a> 
-    </div>
-    
-    <div>
-         <p> &copy; Derechos reservados <img src="imagenes/logo3.jpg" width="120" alt="CODED"></p>
-    </div>
+    <!-- ------------------------ FOOTER O PIÉ DE PÁGINA ---------------------------------------------- -->
+    <footer class="footer">
+        <div>
+            Puedes tener más información en <a href="https://www.google.com.ec/">Google</a>
+        </div>
+
+        <div>
+            <p> &copy; Derechos reservados <img src="imagenes/logo3.jpg" width="120" alt="CODED"></p>
+        </div>
+
         <div class="footer-iconos">
-            <a href="https://www.instagram.com/?hl=es-la" target="_blak"><div class="#"><img src="imagenes/instagram.png" alt="">instagram</div></a> 
-            <a href="https://www.youtube.com/?hl=es&gl=EC" target="_blak"><div class="#"><img src="imagenes/yout.png" alt="">YouTube</div></a>
-            <a href="https://www.facebook.com/facebookapp/?brand_redir=185150934832623" target="_blak"><div class="#"><img src="imagenes/facebook.png" alt="">Facebook</div></a>
-        
-        </div>    
-</footer>
+            <a href="https://www.instagram.com/?hl=es-la" target="_blak">
+                <div class="#">
+                    <img src="imagenes/instagram.png" alt="">instagram
+                </div>
+            </a>
+            <a href="https://www.youtube.com/?hl=es&gl=EC" target="_blak">
+                <div class="#">
+                    <img src="imagenes/yout.png" alt="">YouTube
+                </div>
+            </a>
+            <a href="https://www.facebook.com/facebookapp/?brand_redir=185150934832623" target="_blak">
+                <div class="#">
+                    <img src="imagenes/facebook.png" alt="">Facebook
+                </div>
+            </a>
+        </div>
+    </footer>
 
 </body>
 
