Agrego h2, fuente monospace, y alineo contenidos, bordes provisorios

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 <body>
 
     <!-- ------------------------ HEADER O ENCABEZADO ------------------------------------------------- -->
-    <header class=encabezado>
+    <header class="encabezado">
         <div>
             <img src="img/logo.jpg" alt="">
-            <h1>CODED BRAIN</h1>
+            <h1>CODED BRAIN</h1> <!-- Visulamente se ve muy repetitivo CODER BRAIN con el logo -->
+            <h2>
+                "La lógica te lleva de la A a B,
+                la imaginación te llevará a todos lados" 
+                <i> A. Einstein </i>
+            </h2>
         </div>
         <div>
             <h3>Usuario</h3>
@@ -32,7 +37,7 @@
     </header>
 
     <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
-    <div class="container"></div>
+    <div class="container"></div> <!-- ¿que onda este div, me huele a copy page -->
     <nav class="menu">
         <a href="#">Buzón</a>
         <a href="#">Enviados</a>
