Se corrigió ubicación del div

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     </header>
 
     <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
-    <div class="container"></div> <!-- ¿que onda este div, me huele a copy page -->
+    <div class="container">
     <nav class="menu">
         <a href="#">Buzón</a>
         <a href="#">Enviados</a>
         <a href="#">Borradores</a>
         <a href="#">Eliminados</a>
+    </div>
     </nav>
 
     <!-- ------------------------ SUB MENÚ ------------------------------------------------------------ -->
