Se agregaron iconos al menu y sub-menú

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- ENLACE A LA HOJA DE ESTILO EXTERNO CSS -->
     <link rel="stylesheet" href="/estilo.css">
+    <!-- ENLACE FONT AWESOME-->
+    <script src="https://kit.fontawesome.com/4de09098c3.js" crossorigin="anonymous"></script>
 
     <!-- ESTILO INTERNO -->
     <style>
@@ -39,7 +41,7 @@
     <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
     <div class="container">
         <nav class="menu">
-            <a href="#">Buzón</a>
+            <a href="#"> <i class="fas fa-redo"></i> Buzón</a>
             <a href="#">Enviados</a>
             <a href="#">Borradores</a>
             <a href="#">Eliminados</a>
@@ -50,9 +52,9 @@
     <nav class="sub-menu">
         <a href="#" class="izquierda">Ordenar Por Fecha</a>
         <a href="#" class="izquierda">Seleccionar todos</a>
-        <a href="#" class="centrado">Trabajo</a>
-        <a href="#" class="centrado">Personal</a>
-        <a href="#" class="centrado">Viajes</a>
+        <a href="#" class="centrado"> <i class="fas fa-briefcase"></i> Trabajo</a>
+        <a href="#" class="centrado"><i class="fas fa-male"></i>Personal</a>
+        <a href="#" class="centrado"><i class="fas fa-plane"></i>Viajes</a>
     </nav>
     </div>
     <!-- ------------------------ perfiles---------------------------------------------- -->
