Se rediseñó el menu y sub-menú y se le dieron estilos a ambos

--- a/index.html
+++ b/index.html
@@ -39,23 +39,26 @@
     </header>
 
     <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
-    <div class="container">
+    <div class="container-menu">
         <nav class="menu">
-            <a href="#"> <i class="fas fa-redo"></i> Buzón</a>
-            <a href="#">Enviados</a>
-            <a href="#">Borradores</a>
-            <a href="#">Eliminados</a>
+            <a href="#" class="center"> <i class="fas fa-redo"></i> Buzón</a>
+            <a href="#" class="center">Enviados</a>
+            <a href="#" class="center">Borradores</a>
+            <a href="#" class="center">Eliminados</a>
+        </nav>
     </div>
-    </nav>
 
     <!-- ------------------------ SUB MENÚ ------------------------------------------------------------ -->
-    <nav class="sub-menu">
-        <a href="#" class="izquierda">Ordenar Por Fecha</a>
-        <a href="#" class="izquierda">Seleccionar todos</a>
-        <a href="#" class="centrado"> <i class="fas fa-briefcase"></i> Trabajo</a>
-        <a href="#" class="centrado"><i class="fas fa-male"></i>Personal</a>
-        <a href="#" class="centrado"><i class="fas fa-plane"></i>Viajes</a>
-    </nav>
+    <div class="container-sub">
+        <nav class="sub-menu">
+            <div class="sub-centrado"> 
+                <a href="#" class="izquierda">Ordenar Por Fecha</a>
+                <a href="#" class="izquierda  margen">Seleccionar todos</a>
+                <a href="#" class="centrado"><i class="fas fa-briefcase"></i> Trabajo</a>
+                <a href="#" class="centrado"><i class="fas fa-male"></i>Personal</a>
+                <a href="#" class="centrado"><i class="fas fa-plane"></i>Viajes</a>
+            </div>
+        </nav>
     </div>
     <!-- ------------------------ perfiles---------------------------------------------- -->
     <div class="contanier-perfiles">
