--- a/index.html
+++ b/index.html
@@ -189,33 +189,30 @@
     </div>
 
     <!-- ------------------------ FOOTER O PIÉ DE PÁGINA ---------------------------------------------- -->
-    <footer class="footer">
-        <div>
-            Puedes tener más información en <a href="https://www.google.com.ec/">Google</a>
+    <!-- <div>
+        <p> &copy; Derechos reservados <img src="imagenes/logo3.jpg" width="120" alt="CODED"></p>
+    </div> -->
+    
+    <footer>
+        <div class="brain">
+            <img src="/img/cerebro-04.png" alt="" width="400px">
         </div>
-
-        <div>
-            <p> &copy; Derechos reservados <img src="imagenes/logo3.jpg" width="120" alt="CODED"></p>
+        <div class="foodtxt">
+            <h2> Coded Brain </h2>
+            <h3> &copy; Derechos reservados <img src="" width="120" alt="CODED"> </h3>
         </div>
-
-        <div class="footer-iconos">
-            <a href="https://www.instagram.com/?hl=es-la" target="_blak">
-                <div class="#">
-                    <img src="imagenes/instagram.png" alt="">instagram
-                </div>
-            </a>
-            <a href="https://www.youtube.com/?hl=es&gl=EC" target="_blak">
-                <div class="#">
-                    <img src="imagenes/yout.png" alt="">YouTube
-                </div>
-            </a>
-            <a href="https://www.facebook.com/facebookapp/?brand_redir=185150934832623" target="_blak">
-                <div class="#">
-                    <img src="imagenes/facebook.png" alt="">Facebook
-                </div>
-            </a>
+        <div class="iconos">
+            <ul>
+                <a href=""> Instagram </a>
+                <a href=""> Facebook </a>
+                <a href=""> Whatsapp </a>
+                <a href=""> Web </a>
+            </ul>
         </div>
     </footer>
+
+
+
 
 </body>
 
