Se modificó contenido del sub-menu

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div class="sub-centrado">
                 <a href="#" class="izquierda">Ordenar Por Fecha</a>
                 <a href="#" class="izquierda  margen">Seleccionar todos</a>
-                <a href="#" class="centrado"><i class="fas fa-briefcase"></i> Trabajo</a>
-                <a href="#" class="centrado"><i class="fas fa-male"></i>Personal</a>
-                <a href="#" class="centrado"><i class="fas fa-plane"></i>Viajes</a>
+                <a href="#" class="centrado"><i class="fas fa-envelope-square"></i>Mensajes</a>
+                <a href="#" class="centrado"><i class="fas fa-calendar-alt"></i>Calendario</a>
+                <a href="#" class="centrado"><i class="fas fa-info-circle"></i>Información</a>
             </div>
         </nav>
     </div>
