Se modifico la estructura del header ya que el bosquejo fue modificado

--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
 
     <!-- ------------------------ HEADER O ENCABEZADO ------------------------------------------------- -->
     <header class="encabezado">
-
-        <div>
-            <img src="img/logo_estapa2-04.png" alt="" width=150px>
-        </div>
-        <div>
-            <h3>Usuario</h3>
-            <p>Correo@gmail.com</p>
-            <img src="" alt="">
-        </div>
+        <header class="encabezado0">
+            <div class="hr"><img src="img/logo_estapa2-041.png" alt="" width=160px></div>
+        </header>
+        <header class="encabezado1">
+            <div class="hr0">Usuario</div>
+            <div class="hr0">Correo@gmail.com</div>
+        </header>
+        <header class="encabezado2">
+            <div class="hr1"></div>
+        </header>
+        <header class="encabezado3">
+            <button><i class="far fa-circle"></i></button>
+        </header>
     </header>
 
     <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
@@ -192,7 +196,7 @@
     <!-- <div>
         <p> &copy; Derechos reservados <img src="imagenes/logo3.jpg" width="120" alt="CODED"></p>
     </div> -->
-    
+
     <footer>
         <div class="brain">
             <img src="/img/cerebro-04.png" alt="" width="400px">
