--- a/index.html
+++ b/index.html
@@ -145,19 +145,18 @@
 
                      <div class="card card2" data-tilt data-tilt-max="30" data-tilt-glare data-tilt-max-glare="0.55">
                         <div class="shoe-container">
-                          <img class="shoe" src="img/Luis_foto.jfif" alt="">  
+                          <img class="shoe" src="img/Luis_foto1.png" alt="">  
                         </div>
                          <div class="Category">
-                             <div class="sub-head">Marco Peñafiel</div>
+                             <div class="sub-head">Peralta Tapia Luis Pablo</div>
                              
                          </div>
                          <div class="description">
-                            Nombre:Juan Carlos Hernández Peñaloza</h3>
-                            <br> Nacionalidad: Mexicana
-                            <br> Residencia: Querétaro
-                            <br> Edad:42 años
-                            <br> Estudio: carrera de I.S.C.
-                            <br> Frase: Lo mejor de la vida no se planea, simplemente sucede.
+                            Nombre: Peralta Tapia Luis Pablo</h3>
+                            <br> Nacionalidad: Mexicana.
+                            <br> Lugar de recidencia: Cuernava, Morelos.
+                            <br> Edad: 21 años
+                            <br> Siempre toma toda oportunidad de aprender, siempre sera una aventura
                            </div> 
                          <a href="#">
                              <button class="read-more">México</button>
