Se corrigió el problema de los nombres y algo en las margenes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img class="shoe" src="img/Gaby_foto1.jpg" alt="">
             </div>
             <div class="Category">
-                <div class="sub-head">Marco Peñafiel</div>
+                <div class="sub-head">Gabriel Díaz</div>
             </div>
             <div class="description">
                 Nombre:Gabriel Díaz</h3>
@@ -122,7 +122,7 @@
                 <img class="shoe" src="img/Juan_carlos1_foto.png" alt="">
             </div>
             <div class="Category">
-                <div class="sub-head">Marco Peñafiel</div>
+                <div class="sub-head">Juan Carlos Hernández Peñaloza</div>
             </div>
             <div class="description">
                 Nombre:Juan Carlos Hernández Peñaloza</h3>
