Cambios al header, LO SIENTO JUAN :(

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="hr0">Correo@gmail.com</div>
         </div>
         <div class="encabezado2">
-            <div class="hr1"></div>
+            <div class="hr1"><i class="fas fa-user"></i></div>
         </div>
         <div class="encabezado3">
-            <button><i class="far fa-circle"></i></button>
+            <a href=""><i class="fas fa-cog"></i></i></a>
         </div>
     </header>
     <!-- ------------------------ MENÚ DE NAVEGACIÓN -------------------------------------------------- -->
@@ -154,6 +154,7 @@
                 <button class="read-more">México</button>
             </a>
         </div>
+    </div>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.4.1/vanilla-tilt.min.js"></script>
 
@@ -177,7 +178,7 @@
                 </ul>
             </div>
         </footer>
-    </div>
+    
 </body>
 
 </html>
