Alineo contenidos del footer y doy color monocromático gris

--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
             <img src="/img/cerebro-04.png" alt="" width="400px">
         </div>
         <div class="foodtxt">
-            <h2> Coded Brain </h2>
-            <h3> &copy; Derechos reservados <img src="" width="120" alt="CODED"> </h3>
+            <h2 style="font-size: 60px;"> Coded Brain </h2>
+            <h5> &copy; Derechos reservados </h5> <br> 
+            <p> Plataforma 39A </p>
+            <p> Sudamérica </p>
         </div>
         <div class="iconos">
-            <ul>
-                <a href=""> Instagram </a>
-                <a href=""> Facebook </a>
-                <a href=""> Whatsapp </a>
-                <a href=""> Web </a>
-            </ul>
+                <a href=""> <i class="fab fa-instagram-square"></i> </a>
+                <a href=""> <i class="fab fa-facebook-square"></i> </a>
+                <a href=""> <i class="fab fa-whatsapp-square"></i> </a>
+                <a href=""> <i class="fas fa-globe-americas"></i> </a>
         </div>
     </footer>
 
