Agrego seccíon final bajo el footer con efecto paralax

--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@
         </div>
     </footer>
 
+    <section class="paralax" id="seccion1">
+        <h2> ... lo logramos. </h2>
+    </section>
+
+
 </body>
 
 </html>
